# Robotics-Navigation-and-Mapping

./: CMakeLists.txt  ReadMe.md  ReadMe.txt  group_names.txt  package.xml
cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
launch/: amcl.launch.xml  navigation.launch  slam_toolbox2D.launch  slam_toolbox3D.launch
maps_raw/: map3D_bag1.pgm  map3D_bag1.yaml  map3D_bag2.yaml  map_bag2.yaml
rviz/: configuration.rviz  robot_navigation.rviz
src/: navigation.cpp  tf_publisher.cpp
stage/: map.world  map_bag1.pgm  map_bag1.yaml  robot.inc
waypoints/: waypoints.csv
